@@ -6,7 +6,7 @@
 # Provided by the Cygwin Ports project <http://cygwinports.dotsrc.org/>
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: cygport.in,v 1.73 2007-04-26 06:59:45 yselkowitz Exp $
+# $Id: cygport.in,v 1.74 2007-05-04 21:40:36 yselkowitz Exp $
 #
 ################################################################################
 
@@ -940,6 +940,7 @@ cygconf() {
 		then
 			inform "Removing ${f} to be regenerated by configure"
 			rm -f ${confdir}/${f}
+			ln -sf ${confdir/${S}/${B}}/${f} ${confdir}/${f}
 		fi
 	done
 
@@ -1539,7 +1540,7 @@ __pkg_diff() {
 
 	default_excludes="CYGWIN-PATCHES aclocal.m4* autom4te.cache \
 		config.cache config.log config.status config.h config.h.in
-		ABOUT-NLS Makefile.in.in Makevars.template \
+		ABOUT-NLS Makefile.in.in Makevars.template *SlackBuild* \
 		*.class *.pyc *.mo *.gmo *.orig *.rej *.spec *.temp *~ *.stackdump";
 
 	case ${PN} in
@@ -1571,7 +1572,7 @@ __pkg_diff() {
 		default_excludes+=" *.stamp *.html *.bak *.sgml \
 			*.tmpl *.txt *.xml *.args *.devhelp* *.css \
 			*.hierarchy *.interfaces *.prerequisites *.signals \
-			*.top *.bottom gtk-doc.make gtk-doc.m4";
+			*.png *.top *.bottom gtk-doc.make gtk-doc.m4";
 	fi
 
 	# GNOME miscellaneous
