@@ -1,4 +1,8 @@
 
+	* bin/cygport.in (cygconf):
+	Create symlinks for files removed to be regenerated by configure.
+	(__pkg_diff): Ignore SlackBuild and .png files.
+
 	* CYGWIN-PATCHES/README:
 	* lib/Makefile.am:
 	* lib/xfce4.cygclass: New cygclass for Xfce 4.4.
